@@ -11,6 +11,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 * check_motd_carp_cron: make sure the motd-carp-state.sh script is present and executed by cron if we're a carp member
 * check_custom_unbound: make sure our custom unbound configuration is applied when unbound is used
+* check_restart_needed: check processes that need restarting after upgrade
 
 ### Changed
 
